--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -138,16 +138,5 @@ body {
 //====================================================================================================
 
 //</ОСНОВНОЙ БЛОК>====================================================================================================
-.mainblock {
-	// .mainblock__charger
-	&__charger {
-		font-size: 50px;
-		color: red;
-	}
-	// .mainblock__no-problem
-	&__no-problem {}
-	// .mainblock__image
-	&__image {}
-}
-.container {
-}
+
+$fontfamily: "";
